--- a/index.html
+++ b/index.html
@@ -37,5 +37,17 @@
         </div>
     </div>
     <script src="script.js"></script>
+   <a
+  style="text-decoration: none; font-weight: bold"
+  href="https://bdr3.app.link/rAHwDTRHjKb"
+>
+  <img
+    src="zap.png"
+    alt=""
+    width="940"
+    height="100"
+  />
+</a>
+
 </body>
 </html>
